[gd_scene load_steps=4 format=3 uid="uid://dbqtis4kxl5pa"]

[ext_resource type="FontFile" uid="uid://bv1rnx3susduu" path="res://assets/fonts/Kenney Pixel Square.ttf" id="1_owj4n"]
[ext_resource type="Script" path="res://scripts/win_screen.gd" id="1_v8ikr"]

[sub_resource type="LabelSettings" id="LabelSettings_xcmne"]
font = ExtResource("1_owj4n")
font_size = 48
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8ikr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.490196)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -112.0
offset_right = 120.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU WIN!"
label_settings = SubResource("LabelSettings_xcmne")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 129.0
offset_right = 198.0
offset_bottom = 157.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("1_owj4n")
text = "Enter your name:"

[node name="PlayerNameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 126.0
offset_right = 376.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("1_owj4n")
placeholder_text = "Your Name"
max_length = 13

[node name="SendButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 148.0
offset_top = -9.0
offset_right = 218.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_owj4n")
text = "Send"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = 72.0
offset_right = 67.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_owj4n")
text = "Okay"

[connection signal="pressed" from="SendButton" to="." method="on_send_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="on_back_button_pressed"]
